--- a/templates/login.html
+++ b/templates/login.html
@@ -13,11 +13,11 @@
     <title>Circle Fintech</title>
 
     <!-- Icons -->
-    <link href="{% static 'dist/vendors/css/font-awesome.min.css' %}" rel="stylesheet">
-    <link href="{% static 'dist/vendors/css/simple-line-icons.min.css' %}" rel="stylesheet">
+    <link href="{% static 'font-awesome.min.css' %}" rel="stylesheet">
+    <link href="{% static 'simple-line-icons.min.css' %}" rel="stylesheet">
 
     <!-- Main styles for this application -->
-    <link href="{% static 'dist/css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'style.css' %}" rel="stylesheet">
 
 </head>
 
@@ -95,15 +95,15 @@
 
 
     <!-- Bootstrap and necessary plugins -->
-    <script src="{% static 'dist/vendors/js/jquery.min.js' %}"></script>
-    <script src="{% static 'dist/vendors/js/popper.min.js' %}"></script>
-    <script src="{% static 'dist/vendors/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'dist/vendors/js/pace.min.js' %}"></script>
+    <script src="{% static 'jquery.min.js' %}"></script>
+    <script src="{% static 'popper.min.js' %}"></script>
+    <script src="{% static 'bootstrap.min.js' %}"></script>
+    <script src="{% static 'pace.min.js' %}"></script>
 
-    <script src="{% static 'dist/js/app.js' %}"></script>
+    <script src="{% static 'app.js' %}"></script>
 
 
-    <script src="{% static 'dist/js/views/main.js' %}"></script>
+    <script src="{% static 'main.js' %}"></script>
     <script src="{% static 'custom.js' %}"></script>
 
 </body>
