--- a/templates/post.html
+++ b/templates/post.html
@@ -7,24 +7,26 @@
 <div class="container">
     <div class="row d-flex justify-content-center mt-3">
         <div class="col-md-6 mt-2 mb-3 ">
-            <h4 class="bg-primary text-center text-light badge-pill p-3">Our Posts</h4>
+            <h4 class="bg-primary text-center text-light badge-pill p-3">Our Departments</h4>
         </div>
     </div>
-    <div class="row">
-        {% for i in all_post %}
-        <div class="col-md-3">
-            <div class="card text-center">
-                
-                <div class="card-body">
-                    <h5 class="card-title"><a href="{% url 'edit-post' i.id %}">{{i.name}}</a></h5>
-                    <p class="card-text">Salary: {{i.salary}}</p>
-                    
-                </div>
+    {% for i in dept %}
+      <h3 class="my-3 text-center">{{i.name}}</h3> <hr>
+ <div class="row">
+    {% for p in i.dept_set.all %}
+    <div class="col-md-3">
+        <div class="card text-center">
+    
+            <div class="card-body">
+                <h5 class="card-title"><a href="{% url 'edit-post' i.id%}">{{p.name}}</a> </h5>
+                <p class="card-text">Salary: {{p.salary}}</p>
+    
             </div>
         </div>
-        {% endfor %}
-
     </div>
-
+    {% endfor %}
+    
+ </div>
+{% endfor %}
 </div>
 {% endblock body %}
