--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Circle Fintech">
     <meta name="keyword" content="">
     <link rel="shortcut icon" href="{% static 'img/favicon.png' %}">
-    <title>Circle Fintech</title>
+    <title>My Company</title>
 
     <!-- Icons -->
     <link href="{% static 'font-awesome.min.css' %}" rel="stylesheet">
