--- a/templates/base.html
+++ b/templates/base.html
@@ -19,12 +19,18 @@
     integrity="sha512-tQYZBKe34uzoeOjY9jr3MX7R/mo7n25vnqbnrkskGr4D6YOoPYSpyafUAzQVjV6xAozAqUFIEFsCO4z8mnVBXA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Icons -->
+    <!-- <link href="{% static 'font-awesome.min.css' %}" rel="stylesheet">
+    <link href="{% static 'simple-line-icons.min.css' %}" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script> -->
+    <!-- Main styles for this application -->
+    <!-- <link href="{% static 'style.css' %}" rel="stylesheet"> -->
+
+
     <link href="{% static 'font-awesome.min.css' %}" rel="stylesheet">
     <link href="{% static 'simple-line-icons.min.css' %}" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <!-- Main styles for this application -->
     <link href="{% static 'style.css' %}" rel="stylesheet">
-
 
 </head>
 
